2012-04-04  Steffen Neumann  <sneumann@ipb-halle.de>

	* src/pwiz/data/msdata/RAMPAdapter.cpp (pwiz): Revert hack from 2012-03-26  
	* src/pwiz/data/msdata/MSData.hpp (pwiz): Add Patch suggested by Brian Pratt, 
	for a better fix of problem if first spectrum if it has an index==0
	
2012-04-04  Steffen Neumann  <sneumann@ipb-halle.de>

	* src/ramp.h: enable new I/O on windows

	2012-03-31  Steffen Neumann  <sneumann@ipb-halle.de>

	* src/ramp.h: disable new I/O on windows, should compile, 
	but will fail unit test with *.gz file

2012-03-26  Steffen Neumann  <sneumann@ipb-halle.de>

	* Added unit tests for *.mzdata.gz

2012-03-26  Steffen Neumann  <sneumann@ipb-halle.de>

	* RAMPAdapter.cpp: fix reading the first spectrum 
	if it has an index==0

2012-03-13  Steffen Neumann  <sneumann@ipb-halle.de>

	* R/ramp.R, src/rampR.cpp: back-ported the old XCMS rampR
	interface, which is much faster than cramp

2012-02-28  Steffen Neumann  <sneumann@ipb-halle.de>	

	* src/RcppRamp.cpp: Change the (temporary) Vectors from STL
	to Rcpp::*Vector for reduced memory footprint
	
2011-12-14  Steffen Neumann  <sneumann@ipb-halle.de>

	* Updated to pwiz r3148

2011-11-24  Steffen Neumann  <sneumann@ipb-halle.de>
	* Fixed linking of NetCDF with previous help from 
	  Dan Tenenbaum and Martin Morgan.
	
2011-09-16 Laurent Gatto <lg390@cam.ac.uk>
	* Changed é to \'e in mzR.bib.

2011-09-07 Laurent Gatto <lg390@cam.ac.uk>
	* temporary fixed the 'could not find function "getClass"' warning 
	  adding require("methods", ... ) to .onLoad 
	  (see http://comments.gmane.org/gmane.comp.lang.r.rcpp/2140)
	  but this produces a note about 'Package startup functions should 
	  not change the search path.' But adding methods to the depends 
  	  fiels, as advertised in .onAttach, does not fix the original 
	  warning.
	* Bump version number to 0.99.2 to track changes.

2011-08-10  Steffen Neumann  <sneumann@ipb-halle.de>
	* Temporary Fix for "unable to find ... for function "peaks"